<resources>
    <string name="app_name">SchoolApp</string>
    <string name="calculation">Calculation</string>
    <string name="c">C</string>
    <string name="Percent">%</string>
    <string name="plusdivide">+/-</string>
    <string name="subd">/</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="mult">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="add">+</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="sd">,</string>
    <string name="equals">=</string>
</resources>